--- a/prj.conf
+++ b/prj.conf
@@ -11,13 +11,28 @@ CONFIG_ASSERT_NO_MSG_INFO=y
 
 CONFIG_HW_STACK_PROTECTION=y
 
-CONFIG_CONSOLE=n
+CONFIG_CONSOLE=y
+CONFIG_CONSOLE_HANDLER=n
+# Enable shell for easy DTM commands via text interface
+CONFIG_SHELL=y
+CONFIG_SHELL_BACKEND_RTT=y
+CONFIG_SHELL_BACKEND_RTT_BUFFER=0
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_RTT_CONSOLE=y
+# RTT buffer configuration
+CONFIG_SEGGER_RTT_BUFFER_SIZE_UP=512
+CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=256
+CONFIG_SEGGER_RTT_MAX_NUM_UP_BUFFERS=2
+CONFIG_SEGGER_RTT_MAX_NUM_DOWN_BUFFERS=2
 CONFIG_UART_CONSOLE=n
+
+# Send logs to RTT channel 1 (Shell uses channel 0)
+CONFIG_LOG_BACKEND_RTT=y
+CONFIG_LOG_BACKEND_RTT_BUFFER=1
+CONFIG_LOG_BACKEND_UART=n
 
 CONFIG_LOG=y
 CONFIG_LOG_PRINTK=y
-CONFIG_USE_SEGGER_RTT=y
-CONFIG_LOG_BACKEND_RTT=y
 
 # Use necessary peripherals
 CONFIG_NRFX_TIMER0=y
@@ -25,3 +40,9 @@ CONFIG_NRFX_TIMER1=y
 CONFIG_NRFX_TIMER2=y
 
 CONFIG_FEM_AL_LIB=y
+
+CONFIG_SERIAL=y
+# Select RTT two-wire transport for DTM
+CONFIG_DTM_TRANSPORT_RTT=y
+CONFIG_DTM_TRANSPORT_TWOWIRE=n
+CONFIG_DTM_TRANSPORT_HCI=n
